Revert "fix: Texts are not center aligned in the Program Listing table and updated the header namings"
This reverts commit 3b5e708dd10f05116ae55b7a2fc38a0ca0256a05.

--- a/src/ops-console/pages/ProgramPage.css
+++ b/src/ops-console/pages/ProgramPage.css
@@ -485,12 +485,6 @@
   box-sizing: border-box;
 }
 
-.program-table .data-tablebody-head-cell:nth-child(10),
-.program-table .data-tablebody-cell:nth-child(10) {
-  min-width: 200px !important;
-  width: 200px !important;
-}
-
 .program-page-pagination {
   display: flex;
   justify-content: center;
